🔧 Fix dark mode design issue on editor

--- a/frontend/src/components/system-design/article-editor-page/editor-content/EditorContent.module.scss
+++ b/frontend/src/components/system-design/article-editor-page/editor-content/EditorContent.module.scss
@@ -2,11 +2,7 @@
 
 .preview {
     padding: 14px;
-    background: #fff;
-
-    :global(body.dark) & {
-        background-color: #222;
-    }
+    @include BACKGROUND;
 }
 
 .editor {
@@ -20,34 +16,35 @@
         background-color: #fff;
     }
 
+    :global(.editor-toolbar.disabled-for-preview button:not(.no-disable)) {
+        opacity: 0.2;
+    }
+
     :global(body.dark) & {
         :global(.CodeMirror) {
             color: #ccc;
-            border-color: #555;
             background-color: inherit;
         }
 
-        :global(.cm-s-easymde .CodeMirror-cursor) {
-            border-color: #eee;
-        }
-
-        :global(.editor-toolbar) {
+        :global(.CodeMirror),
+        :global(.editor-toolbar),
+        :global(.editor-toolbar > .separator) {
             border-color: #555;
         }
 
-        :global(.editor-toolbar > *) {
-            color: #eee;
+        :global(.editor-toolbar > button) {
+            color: #dedede;
+        }
+
+        :global(.cm-s-easymde .CodeMirror-cursor) {
+            border-color: #dedede;
         }
 
         :global(.editor-toolbar > .active),
         :global(.editor-toolbar > button:hover),
         :global(.editor-preview pre),
         :global(.cm-s-easymde .cm-comment) {
-            background: #333;
-        }
-
-        :global(.editor-preview) {
-            background-color: #000;
+            background: #353535;
         }
     }
 }
